Replace Scrum view with agile work module
